# chess-AI

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.53ab1b1  CMakeLists.txt.user.7a60dba  Makefile  README.md  board.cpp  board.h  board.ui  boardtile.cpp  boardtile.h  chess-AI  cmake_install.cmake  debugwindow.cpp  debugwindow.h  debugwindow.ui  main.cpp  minmaxabp.cpp  minmaxabp.h  performanceEval.txt  piece.cpp  piece.h  rules.cpp  rules.h  theme.cpp  theme.h  utils.h
.cmake/api/v1/reply/: cache-v2-8caa2d52f7310040fb5c.json  cmakeFiles-v1-d4c4aeff0df656130e25.json  codemodel-v2-ae450bd5b621fde02598.json  index-2021-05-15T19-15-52-0675.json  target-chess-AI-f52e4a6eef43e0bd1284.json  target-chess-AI_autogen-dd6330c65839a6c8a1b7.json
chess-AI_autogen/: mocs_compilation.cpp
chess-AI_autogen/EWIEGA46WW/: moc_board.cpp  moc_board.cpp.d  moc_debugwindow.cpp  moc_debugwindow.cpp.d
chess-AI_autogen/include/: ui_board.h  ui_debugwindow.h
